# MacroScope

./: .gitignore  README.md  dissertation_ongoingdraft_matthewpotts.docx  pyproject.toml  requirements.txt
gui/: main.py  style.qss
macroscope/: __init__.py  report.py  utils.py
macroscope/analysis/: __init__.py  html.py  office.py  one.py  pdf.py  rtf.py
macroscope/extractors/: ole.py  pdf_embedded.py
macroscope/plugins/: ole_macro_plugin.py  pdf_js_plugin.py  sample_plugin.py
scripts/: cli.py
tests/: test_cli.py  test_gui.py  test_hash.py  test_plugins.py  test_recursive.py  test_report.py
